# hs-linear-algebra

./: .gitignore  COPYING  INSTALL  NEWS  README  Setup.lhs  TODO  blas.buildinfo.in  blas.cabal  configure.ac  linear-algebra.buildinfo.in  linear-algebra.cabal
BLAS/: Access.hs  C.hs  Conj.hs  Elem.hs  ITensor.hs  Internal.hs  Matrix.hs  Numeric.hs  Tensor.hs  UnsafeIOToM.hs  UnsafeInterleaveM.hs  Vector.hs
BLAS/C/: Double.hs  Level1.hs  Types.hs
BLAS/Elem/: Base.hs
BLAS/Matrix/: Apply.hs  Base.hs  Diag.hs  Immutable.hs  Mutable.hs  ReadOnly.hs  RowCol.hs  Shaped.hs  Solve.hs
BLAS/Matrix/Apply/: Immutable.hs  Read.hs
BLAS/Matrix/Diag/: Immutable.hs  Read.hs  View.hs
BLAS/Matrix/RowCol/: Immutable.hs  Read.hs  View.hs
BLAS/Matrix/Solve/: Immutable.hs  Mutable.hs  Read.hs  ReadOnly.hs
BLAS/Numeric/: Binary.hs  Immutable.hs  Read.hs  Ternary.hs  Write.hs
BLAS/Tensor/: Base.hs  Copy.hs  Dense.hs  Immutable.hs  Mutable.hs  Read.hs  ReadOnly.hs  Scalable.hs  Swap.hs  Write.hs
BLAS/Tensor/Dense/: Immutable.hs  ReadOnly.hs
Data/Matrix/: Banded.hs  Dense.hs  Diag.hs  Herm.hs  Perm.hs  Tri.hs
Data/Matrix/Banded/: Class.hs  IO.hs  Internal.hs  Operations.hs  ST.hs
Data/Matrix/Banded/Class/: Copying.hs  Creating.hs  Internal.hs  Views.hs
Data/Matrix/Dense/: Class.hs  IO.hs  Internal.hs  Operations.hs  ST.hs
Data/Matrix/Dense/Class/: Base.hs  Copying.hs  Creating.hs  Elements.hs  Internal.hs  Operations.hs  Read.hs  Special.hs  Views.hs  Write.hs
Data/Matrix/Herm/: Banded.hs  Dense.hs
Data/Matrix/Tri/: Banded.hs  Dense.hs
Data/Vector/: Dense.hs
Data/Vector/Dense/: Class.hs  IO.hs  Internal.hs  Operations.hs  ST.hs
Data/Vector/Dense/Class/: Base.hs  Copying.hs  Creating.hs  Internal.hs  Operations.hs  Properties.hs  Read.hs  Special.hs  Views.hs  Write.hs
Data/Vector/Dense/Class/Internal/: Base.hs
Test/QuickCheck/: Complex.hs  Matrix.hs  Permutation.hs  Vector.hs
Test/QuickCheck/Matrix/: Banded.hs  Dense.hs  Diag.hs  Perm.hs
Test/QuickCheck/Matrix/Herm/: Banded.hs  Dense.hs
Test/QuickCheck/Matrix/Tri/: Banded.hs  Dense.hs
Test/QuickCheck/Vector/: Dense.hs
cbits/: BLAS-double.c  BLAS.h  f77_func-hsc.h  vectorOps-double.c  vectorOps-zomplex.c  vectorOps.h  vmath-double.c  vmath-zomplex.c  vmath.h  zomplex.c
examples/: LU.hs
lib/BLAS/: C.hs  CTypes.hs  Conj.hs  Elem.hs  Internal.hs  Matrix.hs  Tensor.hs  Types.hs  Vector.hs
lib/BLAS/C/: Double.hs  Level1.hs  Level2.hs  Level3.hs  Types.hs  Zomplex.hs
lib/BLAS/Elem/: Base.hs  Double.hs  Level1.hs  Level2.hs  Level3.hs  VFloating.hs  VFractional.hs  VMath.hs  VNum.hs  Zomplex.hs
lib/BLAS/Matrix/: Base.hs  HasVectorView.hs  IMatrix.hs  Immutable.hs  MMatrix.hs  Mutable.hs  ST.hs  STBase.hs  Solve.hs
lib/BLAS/Matrix/Solve/: ISolve.hs  Immutable.hs  MSolve.hs  Mutable.hs
lib/BLAS/Tensor/: Immutable.hs  Read.hs  Write.hs
lib/BLAS/Vector/: Base.hs  ST.hs  STBase.hs
lib/Data/Elem/: BLAS.hs  Conj.hs
lib/Data/Elem/BLAS/: Base.hs  Double.hs  Level1.hs  Level2.hs  Level3.hs  Types.hs  Zomplex.hs
lib/Data/Matrix/: Banded.hs  Class.hs  Dense.hs  HasVectorView.hs  Herm.hs  HermBase.hs  IMatrix.hs  ISolve.hs  MMatrix.hs  MSolve.hs  Shaped.hs  Tri.hs  TriBase.hs
lib/Data/Matrix/Banded/: Base.hs  Class.hs  IO.hs  IOBase.hs  Internal.hs  ST.hs  STBase.hs
lib/Data/Matrix/Class/: IMatrix.hs  IMatrixBase.hs  ISolve.hs  ISolveBase.hs  MMatrix.hs  MMatrixBase.hs  MSolve.hs  MSolveBase.hs
lib/Data/Matrix/Dense/: Base.hs  Class.hs  IO.hs  IOBase.hs  Internal.hs  ST.hs  STBase.hs
lib/Data/Matrix/Tri/: Internal.hs
lib/Data/Tensor/: Class.hs
lib/Data/Tensor/Class/: ITensor.hs  Immutable.hs  MTensor.hs  Read.hs  Write.hs
lib/Data/Vector/: Dense.hs
lib/Data/Vector/Dense/: Base.hs  Class.hs  IO.hs  IOBase.hs  Internal.hs  ST.hs  STBase.hs
lib/Foreign/: BLAS.hs  LAPACK.hs  VMath.hs
lib/Foreign/BLAS/: Double.hsc  Level1.hs  Level2.hs  Level3.hs  Types.hs  Zomplex.hsc
lib/Foreign/LAPACK/: Double.hsc  Types.hs  Zomplex.hsc
lib/Foreign/VMath/: Double.hs  VFloating.hs  VFractional.hs  VNum.hs  Zomplex.hs
lib/Numeric/: LinearAlgebra.hs
lib/Numeric/LinearAlgebra/: CTypes.hs  Elem.hs  Internal.hs  Matrix.hs  Packed.hs  Statistics.hs  Types.hs  Vector.hs
lib/Numeric/LinearAlgebra/Elem/: BLAS.hs  BLAS1.hs  BLAS2.hs  BLAS3.hs  Double.hs  VFloating.hs  VFractional.hs  VMath.hs  VNum.hs  Zomplex.hs
lib/Numeric/LinearAlgebra/Factor/: Cholesky.hs  Eigen.hs
lib/Numeric/LinearAlgebra/Matrix/: Base.hs  Cholesky.hs  Eigen.hs  Herm.hs  Packed.hs  ST.hs  STBase.hs  Statistics.hs  Tri.hs
lib/Numeric/LinearAlgebra/Packed/: Base.hs  Cholesky.hs  Herm.hs  ST.hs  Statistics.hs  Tri.hs
lib/Numeric/LinearAlgebra/Types/: BLAS.hs  BLAS1.hs  BLAS2.hs  BLAS3.hs  CEnums.hs  Double.hs  Enums.hs  VFloating.hs  VFractional.hs  VMath.hs  VNum.hs  Zomplex.hs
lib/Numeric/LinearAlgebra/Vector/: Base.hs  ST.hs  STBase.hs  Statistics.hs
lib/Test/: Matrix.hs  Permutation.hs
lib/Test/Matrix/: Banded.hs  Dense.hs  Diag.hs  Perm.hs
lib/Test/Matrix/Herm/: Banded.hs  Dense.hs
lib/Test/Matrix/Tri/: Banded.hs  Dense.hs
lib/Test/QuickCheck/: BLAS.hs  BLASBase.hs  LinearAlgebra.hs
lib/Test/Vector/: Dense.hs
lib/Unsafe/: BLAS.hs
m4/: ax_blas.m4  ax_blas_func.m4  ax_check_blas.m4  ax_check_lapack.m4
tests/: Banded.hs  Diag.hs  Driver.hs  HermBanded.hs  HermMatrix.hs  Main.hs  Makefile  Makefile.in  Matrix.hs  Monadic.hs  Perm.hs  STMatrix.hs  STVector.hs  Statistics.hs  TriBanded.hs  TriMatrix.hs  Typed.hs  Vector.hs
tests-old/: Banded.hs  Driver.hs  HermMatrix.hs  Main.hs  Makefile.in  Matrix.hs  Monadic.hs  TriBanded.hs
tests-old/Test/Matrix/Tri/: Banded.hs  Dense.hs
tests/Generators/: Matrix.hs  Permutation.hs
tests/Generators/Matrix/: Banded.hs  Dense.hs  Diag.hs  Perm.hs
tests/Generators/Matrix/Herm/: Banded.hs  Dense.hs
tests/Generators/Matrix/Tri/: Banded.hs  Dense.hs
tests/Generators/Vector/: Dense.hs
tests/Test/Matrix/: Banded.hs  Dense.hs
tests/Test/Matrix/Herm/: Banded.hs  Dense.hs
tests/Test/Matrix/Tri/: Banded.hs  Dense.hs
tests/Test/Vector/: Dense.hs
(+22 files in other folders)
