name:            blas
version:         0.7
homepage:        http://stat.stanford.edu/~patperry/code/blas
synopsis:        Bindings to the BLAS library
description:
    The BLAS (Basic Linear Algebra Subprograms) are routines that provide
    standard building blocks for performing basic vector and matrix operations. 
    The Level 1 BLAS perform scalar, vector and vector-vector operations, the 
    Level 2 BLAS perform matrix-vector operations, and the Level 3 BLAS perform
    matrix-matrix operations. Because the BLAS are efficient, portable, and
    widely available, they are commonly used in the development of high quality
    linear algebra software, LAPACK for example.
    .
    For more information, see the Netlib BLAS webpage:
    <http://www.netlib.org/blas/> 
    .
category:        Math
license:         BSD3
license-file:    COPYING
copyright:       (c) 2008. Patrick Perry <patperry@stanford.edu>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@stanford.edu>
cabal-version:   >= 1.2.0
build-type:      Configure
tested-with:     GHC == 6.10.1

extra-source-files:     NEWS README TODO configure.ac configure
                        aclocal.m4 m4/ax_blas.m4
                        blas.buildinfo.in cbits/config.h.in tests/Makefile.in
                        
                        examples/LU.hs
                        
                        tests/Main.hs
                        tests/Driver.hs
                        tests/Vector.hs
                        tests/STVector.hs
                        tests/Matrix.hs
                        tests/STMatrix.hs
                        tests/Banded.hs
                        tests/HermMatrix.hs
                        tests/HermBanded.hs
                        tests/TriBanded.hs
                        tests/TriMatrix.hs
                                            
extra-tmp-files:        config.log config.status autom4te.cache
                        blas.buildinfo cbits/config.h tests/Makefile

library
    hs-source-dirs:     lib
    exposed-modules:    
                        BLAS.C
                            BLAS.C.Level1
                            BLAS.C.Level2
                            BLAS.C.Level3
                            BLAS.C.Types

                        BLAS.Conj

                        BLAS.Elem
                            BLAS.Elem.Base

                        BLAS.Internal

                        BLAS.Tensor
                            BLAS.Tensor.Base
                            BLAS.Tensor.Immutable
                            BLAS.Tensor.Read
                            BLAS.Tensor.Write

                        BLAS.Types

                        BLAS.UnsafeIOToM

                        Data.Matrix.HasVectorView
                        Data.Matrix.Shaped
                        Data.Matrix.IMatrix
                        Data.Matrix.MMatrix
                        Data.Matrix.ISolve
                        Data.Matrix.MSolve

                        Data.Matrix.Banded
                            Data.Matrix.Banded.IO
                            Data.Matrix.Banded.ST
                            Data.Matrix.Banded.Class
                        
                        Data.Matrix.Dense
                            Data.Matrix.Dense.IO
                            Data.Matrix.Dense.ST
                            Data.Matrix.Dense.Class

                        Data.Matrix.Herm
                        Data.Matrix.Tri

                        Data.Vector.Dense
                            Data.Vector.Dense.IO
                            Data.Vector.Dense.ST
                            Data.Vector.Dense.Class

                        Test.Vector.Dense
                        Test.Matrix
                        Test.Matrix.Banded
                        Test.Matrix.Dense
                        Test.Matrix.Herm.Banded
                        Test.Matrix.Herm.Dense
                        Test.Matrix.Tri.Banded
                        Test.Matrix.Tri.Dense

    other-modules:      BLAS.C.Double
                        BLAS.C.Zomplex
                        
                        Data.Vector.Dense.Internal
                        Data.Vector.Dense.Class.Internal
                        Data.Vector.Dense.Class.Internal.Base
                        Data.Vector.Dense.Class.Creating
                        Data.Vector.Dense.Class.Elements
                        Data.Vector.Dense.Class.Special
                        Data.Vector.Dense.Class.Views
                        Data.Vector.Dense.Class.Copying
                        Data.Vector.Dense.Class.Properties
                        Data.Vector.Dense.Class.Operations
                        
                        Data.Matrix.Banded.Internal
                        Data.Matrix.Banded.Class.Internal
                        Data.Matrix.Banded.Class.Creating
                        Data.Matrix.Banded.Class.Elements
                        Data.Matrix.Banded.Class.Special
                        Data.Matrix.Banded.Class.Views
                        Data.Matrix.Banded.Class.Copying
                        
                        Data.Matrix.Dense.Internal
                        Data.Matrix.Dense.Class.Internal
                        Data.Matrix.Dense.Class.Creating
                        Data.Matrix.Dense.Class.Elements
                        Data.Matrix.Dense.Class.Special
                        Data.Matrix.Dense.Class.Views
                        Data.Matrix.Dense.Class.Copying
                        Data.Matrix.Dense.Class.Operations
                        
                        Data.Matrix.Tri.Internal                        
    
    includes:           cbits/config.h
                        cbits/BLAS.h
    include-dirs:       cbits
    c-sources:          cbits/double.c
                        cbits/zomplex.c
                        
    ghc-options:        -Wall
    extensions:         BangPatterns, FlexibleContexts, 
                        FlexibleInstances, ForeignFunctionInterface, 
                        FunctionalDependencies, MultiParamTypeClasses,
                        TypeFamilies
    build-depends:      base, ieee, storable-complex, QuickCheck >= 1.2
