name:            blas
version:         0.7
homepage:        http://stat.stanford.edu/~patperry/code/blas
synopsis:        Bindings to the BLAS library
description:
    The BLAS (Basic Linear Algebra Subprograms) are routines that provide
    standard building blocks for performing basic vector and matrix operations. 
    The Level 1 BLAS perform scalar, vector and vector-vector operations, the 
    Level 2 BLAS perform matrix-vector operations, and the Level 3 BLAS perform
    matrix-matrix operations. Because the BLAS are efficient, portable, and
    widely available, they are commonly used in the development of high quality
    linear algebra software, LAPACK for example.
    .
    For more information, see the Netlib BLAS webpage:
    <http://www.netlib.org/blas/> 
    .
category:        Math
license:         BSD3
license-file:    COPYING
copyright:       (c) 2008. Patrick Perry <patperry@stanford.edu>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@stanford.edu>
cabal-version:   >= 1.2.0
build-type:      Configure
tested-with:     GHC == 6.10.1

extra-source-files:     NEWS README TODO configure.ac configure
                        aclocal.m4 m4/ax_blas.m4
                        blas.buildinfo.in cbits/config.h.in tests/Makefile.in
                        
                        examples/LU.hs
                        
                        tests/Main.hs
                        tests/Driver.hs
                        tests/Vector.hs
                        tests/STVector.hs
                        tests/Matrix.hs
                        tests/STMatrix.hs
                        tests/Banded.hs
                        tests/HermMatrix.hs
                        tests/HermBanded.hs
                        tests/TriBanded.hs
                        tests/TriMatrix.hs
                                            
extra-tmp-files:        config.log config.status autom4te.cache
                        blas.buildinfo cbits/config.h tests/Makefile

library
    hs-source-dirs:     lib
    exposed-modules:    BLAS.Internal
                        BLAS.CTypes

                        Data.Elem.BLAS

                        Data.Tensor.Class
                            Data.Tensor.Class.ITensor
                            Data.Tensor.Class.MTensor

                        Data.Matrix.Class
                            Data.Matrix.Class.IMatrix
                            Data.Matrix.Class.IMatrixBase
                            Data.Matrix.Class.MMatrix
                            Data.Matrix.Class.MMatrixBase
                            Data.Matrix.Class.ISolve
                            Data.Matrix.Class.ISolveBase
                            Data.Matrix.Class.MSolve
                            Data.Matrix.Class.MSolveBase

                        Data.Matrix.Banded
                            Data.Matrix.Banded.Base
                            Data.Matrix.Banded.Class
                            Data.Matrix.Banded.IO
                            Data.Matrix.Banded.IOBase
                            Data.Matrix.Banded.ST
                            Data.Matrix.Banded.STBase
                        
                        Data.Matrix.Dense
                            Data.Matrix.Dense.Base
                            Data.Matrix.Dense.Class
                            Data.Matrix.Dense.IO
                            Data.Matrix.Dense.IOBase
                            Data.Matrix.Dense.ST
                            Data.Matrix.Dense.STBase

                        Data.Matrix.Herm
                        Data.Matrix.Tri

                        Data.Vector.Dense
                            Data.Vector.Dense.Base
                            Data.Vector.Dense.Class
                            Data.Vector.Dense.IO
                            Data.Vector.Dense.IOBase
                            Data.Vector.Dense.ST
                            Data.Vector.Dense.STBase

                        Test.Vector.Dense
                        Test.Matrix
                        Test.Matrix.Banded
                        Test.Matrix.Dense
                        Test.Matrix.Herm.Banded
                        Test.Matrix.Herm.Dense
                        Test.Matrix.Tri.Banded
                        Test.Matrix.Tri.Dense

    other-modules:      
                        BLAS.Types
                        BLAS.UnsafeIOToM

                        Data.Elem.BLAS.Base
                        Data.Elem.BLAS.Level1
                        Data.Elem.BLAS.Level2
                        Data.Elem.BLAS.Level3
                        Data.Elem.BLAS.Double
                        Data.Elem.BLAS.Zomplex
                        
                        Data.Matrix.Tri.Internal                        
    
    includes:           cbits/config.h
                        cbits/BLAS.h
    include-dirs:       cbits
    c-sources:          cbits/double.c
                        cbits/zomplex.c
                        
    ghc-options:        -Wall
    extensions:         BangPatterns, FlexibleContexts, 
                        FlexibleInstances, ForeignFunctionInterface, 
                        FunctionalDependencies, MultiParamTypeClasses,
                        ScopedTypeVariables,
                        TypeFamilies
    build-depends:      base, ieee, storable-complex, QuickCheck >= 1.2
