name:            linear-algebra
version:         0.8
homepage:        http://github.com/patperry/hs-linear-algebra
synopsis:        A linear algebra library with bindings to BLAS and LAPACK
description:
    The BLAS (Basic Linear Algebra Subprograms) are routines that provide
    standard building blocks for performing basic vector and matrix operations. 
    The Level 1 BLAS perform scalar, vector and vector-vector operations, the 
    Level 2 BLAS perform matrix-vector operations, and the Level 3 BLAS perform
    matrix-matrix operations. Because the BLAS are efficient, portable, and
    widely available, they are commonly used in the development of high quality
    linear algebra software, LAPACK for example.
    .
    For more information, see the Netlib BLAS webpage:
    <http://www.netlib.org/blas/> 
    .
category:        Math
license:         BSD3
license-file:    COPYING
copyright:       (c) 2010. Patrick Perry <patperry@gmail.com>
author:          Patrick Perry
maintainer:      Patrick Perry <patperry@gmail.com>
cabal-version:   >= 1.2.3
build-type:      Configure
tested-with:     GHC == 6.12.2

extra-source-files:     NEWS README TODO configure.ac configure
                        aclocal.m4 m4/ax_check_blas.m4
                        linear-algebra.buildinfo.in cbits/config.h.in
                        cbits/BLAS.h cbits/vectorOps.h tests/Makefile.in
                        
                        examples/LU.hs
                        
                        tests/Test/Vector/Dense.hs
                        tests/Test/Matrix/Banded.hs
                        tests/Test/Matrix/Dense.hs
                        tests/Test/Matrix/Herm/Banded.hs
                        tests/Test/Matrix/Herm/Dense.hs
                        tests/Test/Matrix/Tri/Banded.hs
                        tests/Test/Matrix/Tri/Dense.hs
                        tests/Main.hs
                        tests/Driver.hs
                        tests/Monadic.hs
                        tests/Vector.hs
                        tests/STVector.hs
                        tests/Matrix.hs
                        tests/STMatrix.hs
                        tests/Banded.hs
                        tests/HermMatrix.hs
                        tests/HermBanded.hs
                        tests/TriBanded.hs
                        tests/TriMatrix.hs
                                            
extra-tmp-files:        config.log config.status autom4te.cache
                        linear-algebra.buildinfo cbits/config.h
                        tests/Makefile

Library
    hs-source-dirs:     lib
    exposed-modules:    
                        Numeric.LinearAlgebra
                        Numeric.LinearAlgebra.Elem
                        Numeric.LinearAlgebra.Elem.BLAS                        
                        Numeric.LinearAlgebra.Elem.VMath                        

                        Numeric.LinearAlgebra.Types

                        Numeric.LinearAlgebra.Matrix
                        Numeric.LinearAlgebra.Matrix.ST
                        Numeric.LinearAlgebra.Vector
                        Numeric.LinearAlgebra.Vector.ST
                        
                        Test.QuickCheck.LinearAlgebra
                        
    other-modules:      
                        Numeric.LinearAlgebra.Elem.Double
                        Numeric.LinearAlgebra.Elem.BLAS1
                        Numeric.LinearAlgebra.Elem.BLAS2
                        Numeric.LinearAlgebra.Elem.BLAS3
                        Numeric.LinearAlgebra.Elem.VNum                        
                        Numeric.LinearAlgebra.Elem.VFractional                        
                        Numeric.LinearAlgebra.Elem.VFloating
                        Numeric.LinearAlgebra.Elem.Zomplex
                        Numeric.LinearAlgebra.Internal
                        Numeric.LinearAlgebra.CTypes
                        Numeric.LinearAlgebra.Matrix.Base
                        Numeric.LinearAlgebra.Matrix.STBase
                        Numeric.LinearAlgebra.Vector.Base
                        Numeric.LinearAlgebra.Vector.STBase
    
    includes:           cbits/config.h
                        cbits/BLAS.h
                        cbits/vectorOps.h                        
    include-dirs:       cbits
    c-sources:          cbits/BLAS-double.c
                        cbits/BLAS-zomplex.c
                        cbits/vectorOps-double.c
                        cbits/vectorOps-zomplex.c                                                
                        
    ghc-options:        -Wall
    
    extensions:         BangPatterns,
                        CPP,
                        DeriveDataTypeable,
                        FlexibleContexts,
                        FlexibleInstances,
                        GeneralizedNewtypeDeriving,
                        ForeignFunctionInterface, 
                        Rank2Types,
                        TypeFamilies
                         
    build-depends:      base >= 4 && < 5, ieee, storable-complex,
                        QuickCheck >= 2.1 && < 3

Executable test-hs-linear-algebra
    hs-source-dirs:     lib, tests
    main-is:            Main.hs
    other-modules:      Vector
                        STVector,
                        Matrix,
                        STMatrix,
                        Typed

    includes:           cbits/config.h
                        cbits/BLAS.h
                        cbits/vectorOps.h                        
    include-dirs:       cbits
    c-sources:          cbits/BLAS-double.c
                        cbits/BLAS-zomplex.c
                        cbits/vectorOps-double.c
                        cbits/vectorOps-zomplex.c                                                
    
    extensions:         Rank2Types, ScopedTypeVariables
    
    build-depends:      base,
                        QuickCheck >= 2.1 && < 3,
                        test-framework >= 0.3.1 && < 0.4,
                        test-framework-quickcheck2 >= 0.2.7 && < 0.3
